# jig

./: .gitignore  LICENSE  README.md  Rakefile  pyproject.toml
src/jig/: create.py  main_cli.py  utils.py
src/jig/cmds/: app.py  cpp.py  lib.py  project.py
test/: test_cpp_class.py
